--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -639,7 +639,7 @@ input{
     display: block;
     /* width: 430px; */
     padding: 15px;
-    border: 2px dashed hsl(0deg 0% 0% / 22%);
+    /* border: 2px dashed hsl(0deg 0% 0% / 22%); */
     border-radius: 50%;
 }
 .item.slick-slide {
@@ -1334,4 +1334,12 @@ section.bi-work-process.bottom-padding {
 }
 .bi-content-with-image.marketing {
     margin-top: -65px;
+}
+.branding-wrapper .project-img-box {
+    height: 290px;
+    border-radius: 20px;
+    padding: 0;
+}
+.branding-wrapper .project-img-box img{
+    border-radius: 20px;
 }
